<resources>
    <string name="app_name">ClassifiedApp</string>
    <string name="sign_up_or_login">Sign up or login.</string>
    <string name="we_are_waiting_for_you">We are waiting for you!</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="signup">Signup</string>
    <string name="or">or</string>
    <string name="login">log in</string>
    <string name="with_email">with email</string>
    <string name="join_us">Join Us!</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="google_client_id">84772614571-1mol97matbucnu3bqtaeo1ofhgoiur9d.apps.googleusercontent.com</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account">Create an Account</string>
    <string name="home">Home</string>
    <string name="random">Random</string>
    <string name="sell">Sell</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="browse_by_category">Browse by category</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="already_have_an_account_signup">Already have an account? Sign in</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="sell_item">Sell Item</string>
    <string name="provide_details_about_your_product_to_attract_potential_buyers">Provide details about your product to attract potential buyers</string>
    <string name="product_title">Product Title</string>
    <string name="subcategory">Subcategory</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="shipping_available">Shipping available?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="who_will_pay_for_shipping">Who will pay for shipping?</string>
    <string name="me">Me</string>
    <string name="buyer">Buyer</string>
    <string name="product_images">Product Images</string>
    <string name="pick_images">Pick Images</string>
    <string name="currency">Currency</string>
    <string name="places_api_key">AIzaSyDiRMCKUJpeycJlUxxN8GWzcYAGC3vodrs</string>
    <string name="maps_api_key">AIzaSyABOR5tw9x2o7Jm9WcaNe3wxNxr_Phh_4I</string>
    <string name="create_ad">Create Ad</string>
    <string name="select_category">Select Category</string>
    <string name="select_subcategory">Select Subcategory</string>
    <string name="please_wait">Please Wait</string>
    <string name="fetching_categories">Fetching categories</string>
    <string name="seller">seller</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="ad_created">Ad Created Successfully</string>
    <string name="ad_updated">Ad Updated Successfully</string>
    <string name="creating_ad">Creating Ad</string>
    <string name="discover">Discover</string>
    <string name="posted">Posted</string>
    <string name="can_be_shipped">Can be shipped</string>
    <string name="can__not_be_shipped">Shipping not applicable</string>
    <string name="report_item">Report Listing</string>
    <string name="chats">Chats</string>
    <string name="type_som_ething">Type something...</string>
    <string name="fetching_ad">Fetching Classified Advertisement</string>
    <string name="verifying_its_you">Verifying its you</string>
    <string name="please_enter_your_password_to_login_to_the_system">Please enter password for </string>
    <string name="invalid_email">Invalid email</string>
    <string name="creating_account">Creating account</string>
    <string name="quick_filters">Quick Filters</string>
    <string name="tap_here_to_select_location">Tap here to select a location</string>
    <string name="select_a_category_to_see_subcategories">Select a category to see corresponding categories</string>
    <string name="price_range">Price Range</string>
    <string name="to">To</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="filtered_ads">Filtered Ads</string>
    <string name="no_ads_filter">No Listings Match Your Filter</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="you_donot_have_any_listing_in_your_wishlist">You don\'t have any listing in your wishlist</string>
    <string name="no_listing_posted">You have not posted any listing yet</string>
    <string name="my_listings">My Listings</string>
    <string name="no_listings">No listings posted. Be the first to post a listing by visiting the Sell tab.</string>
    <string name="delete_account">Delete Account</string>
    <string name="do_you_really">Do you really want to delete your profile and all the related data including listings and chats?</string>
    <string name="do_you_really2">This is an irreversible process and will result in the deletion of all your profile data. Do you wish to continue?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="deleting_account">Deleting account. Please be patient this can take longer in case of large dataset.</string>
    <string name="authenticating">Authenticating please wait</string>
    <string name="select_a_product_and_start_chat_with_the_seller">Select a product and start chat with the seller.</string>
    <string name="tap_an_image_to_replace_with_new_picture">Tap an image to replace with new picture.</string>
    <string name="edit_ad">Edit Ad</string>
    <string name="specify_shipping_payer">Please specify who will pay for shipping.</string>
    <string name="please_select_subcategory">Please select subcategory.</string>
    <string name="image_updated">Image updated</string>
    <string name="grant_all_permissions">Grant all permission to proceed</string>
    <string name="select_image_2">Please select 2nd image</string>
    <string name="select_image_1">Please select 1st image</string>
    <string name="uploading_image">Uploading Image</string>
    <string name="do_you_want_to_del_ad">Do you really want to delete this listing?</string>
    <string name="offensive_or_inappropriate">Offensive or Inappropriate</string>
    <string name="targets_a_sect_or_group_of_people">Targets a sect or group of people</string>
    <string name="adult_content">Adult content</string>
    <string name="scam_or_fraud">Scam or fraud</string>
    <string name="sale_of_illegal_or_regulatory_goods">Sale of illegal or regulatory goods</string>
    <string name="i_just_don_t_like_it">I just don\'t like it</string>
    <string name="please_tell_us">Please select a reason for reporting.</string>
    <string name="cancel">Cancel</string>
    <string name="feedback_recorded">Your feedback has been recorded</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="require_update">Requires Update</string>
    <string name="approved">Approved</string>
    <string name="made_changes">Seller has made changes to their listing</string>
    <string name="update">Update</string>
    <string name="admin_cannot">Admins cannot login to this application</string>
    <string name="ad_reported">A listing was just reported</string>
    <string name="quantity">Quantity</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="buy">Buy</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="checkout">Checkout</string>
    <string name="paid">Paid</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="donot_forget_to_rate_your_expperience">Donot forget to rate your expperience</string>
    <string name="done">Done</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="thank_you_feedback">Thank you for your feedback</string>
    <string name="cannot_buy_more">Cannot buy more than available quantity.</string>
    <string name="items_available">Items Available:</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="new_order">New Order</string>
    <string name="somebody_placed">Somebody placed an order</string>
    <string name="orders">Orders</string>
    <string name="total">Total</string>
    <string name="status">Status</string>
    <string name="ordered_on">Ordered On</string>
    <string name="view_orders">View Orders</string>
    <string name="address">Address</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="my_orders">My Orders</string>
    <string name="your_order_confirmed">Your order has been confirmed.</string>
    <string name="fetching_orders">Fetching your orders</string>
    <string name="no_orders_placed">You have not placed any orders yet</string>
    <string name="no_orders_for_listing">No buyer has placed order for this listing.</string>
    <string name="no_listings_for_user">This user has not posted any listing</string>
    <string name="fetching_chats">Fetching Chats</string>
    <string name="deleted_ad">Deleted listing</string>
    <string name="deleted_user">Deleted user</string>
    <string name="pay">Pay</string>
    <string name="to_make_featured_for_24h">Feature for 24h, </string>
    <string name="featured">FEATURED</string>
    <string name="buy_premium_to_post">Buy Premium To Post Ad.</string>
    <string name="buy_premium_to_send">Buy Premium to send</string>
    <string name="cannot_accept_orders">Buyer cannot accept more orders</string>
    <string name="buy_pro">Buy Pro? </string>
    <string name="cancel_anytime">Cancel Anytime</string>
    <string name="in_just">in just</string>
    <string name="expires_on">Expires On:</string>
    <string name="pro_activated">Pro Activated</string>
    <string name="paypal_client_id">AX-XvQtaS3Qqg2dgPkJGDD0D8U1_4nFUAkR2hLJOZFPZy0yNIiwA06iVzcAfNX1d3JfAjbd81SuT4UiA</string>
    <string name="mark_as_featured">Mark As Featured</string>
    <string name="pay_eur_to_make">Attract more buyers by marking your listing as featured for 24h in</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="to_complete_order">to complete order</string>
    <string name="please_select_location">Please select dropoff location</string>
    <string name="most_liked">Most Liked Products</string>
    <string name="favourites">Favourites</string>
    <string name="password_checks">Password must be at least 10 characters long and must contain at least 1 capital letter and at least 1 number.</string>
    <string name="contact_support">Contact Support</string>
    <string name="membership_benefits">Membership Benefits</string>
    <string name="send_unlimited_messages">* Send unlimited messages.</string>
    <string name="post_unlimited_advertisements">* Post unlimited advertisements.</string>
    <string name="receive_unlimited_orders_from_buyers">* Receive unlimited orders from buyers.</string>
    <string name="all_your_ads_will_be_featured_until_the_membership_expires">* All your ads will be featured until the membership expires.</string>
    <string name="here_are_some_the_benefits_you_really_donot_want_to_miss">Here are some the benefits you really donot want to miss.</string>
</resources>