<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/home"
        android:icon="@drawable/outline_home_24"
        android:id="@+id/item_home"
        />
    <item
        android:title="@string/random"
        android:id="@+id/item_random"
        android:icon="@drawable/dice"
        />
    <item
        android:title="@string/sell"
android:icon="@drawable/baseline_add_24"
        android:id="@+id/item_sell"
        />
    <item
        android:title="@string/chat"
        android:id="@+id/item_chat"
        android:icon="@drawable/mail"
        />
    <item
        android:title="@string/profile"
        android:icon="@drawable/outline_account_circle_24"
       android:id="@+id/item_profile"
        />
</menu>