<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:title="@string/most_liked"
    android:id="@+id/item_most_liked"
    android:icon="@drawable/popularity"
    />
    <item
        android:title="@string/favourites"
        android:id="@+id/item_favourites"
        android:icon="@drawable/heart_teal"
        />
    <item
        android:title="@string/my_orders"
        android:id="@+id/item_my_orders"
        android:icon="@drawable/order"
        />
    <item
        android:title="@string/contact_support"
        android:id="@+id/item_contact_support"
        android:icon="@drawable/customer_support"
        />
    <item
        android:title="@string/logout"
        android:id="@+id/item_logout"
        android:icon="@drawable/person"
        />
</menu>