<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:id="@+id/rg_report"
        >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offensive_or_inappropriate"
            android:id="@+id/rb_offensive"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/targets_a_sect_or_group_of_people"
            android:id="@+id/rb_target"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adult_content"
            android:id="@+id/rb_adult"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scam_or_fraud"
            android:id="@+id/rb_scam"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sale_of_illegal_or_regulatory_goods"
            android:id="@+id/rb_illegal"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_just_don_t_like_it"
            android:id="@+id/rb_dislike"
            />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/report_item"
        android:layout_margin="8dp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="8dp"
        android:visibility="gone"
        android:id="@+id/tv_report_listing"
        android:background="@drawable/bg_report_btn"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        />
</LinearLayout>