<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/membership_benefits"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        />
    <View
        android:layout_width="50dp"
        android:layout_height="0.5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@color/teal_200"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/here_are_some_the_benefits_you_really_donot_want_to_miss"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_unlimited_messages"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_unlimited_advertisements"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/receive_unlimited_orders_from_buyers"
    android:layout_marginStart="12dp"
    android:layout_marginTop="12dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_your_ads_will_be_featured_until_the_membership_expires"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_premium"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:id="@+id/tv_buyPremium"
        android:background="@drawable/bg_selected_item"
        android:layout_marginBottom="12dp"
        />

</LinearLayout>