<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FragmentAddProduct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sell_item"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:text="@string/provide_details_about_your_product_to_attract_potential_buyers"
            />
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_title"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/et_product_title"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:layout_marginTop="16dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/outline_arrow_drop_down_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/et_category"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subcategory"
            android:layout_marginTop="16dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/outline_arrow_drop_down_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/et_sub_category"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:inputType="text"
                android:id="@+id/et_details"
                android:gravity="start"
                app:textInputLayoutFocusedRectEnabled="false"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/et_price"
                android:gravity="start"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/et_location"
                android:gravity="start"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shipping_available"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <RadioGroup
            android:id="@+id/rg_shipping"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:checkedButton="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_yes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/yes"/>
        <RadioButton
            android:id="@+id/rb_no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/no"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/who_will_pay_for_shipping"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:checkedButton="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rb_me"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/me"/>
            <RadioButton
                android:id="@+id/rb_buyer"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/buyer"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/product_images"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_product_images"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:background="@drawable/btn_sign_in_opts"
            android:text="@string/pick_images"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
    </LinearLayout>

</ScrollView>